<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="back">Назад</string>

    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>

    <string name="share_message">https://practicum.yandex.ru/profile/android-developer-plus/</string>

    <string name="support_mail">airin1317@yandex.ru</string>
    <string name="support_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>

    <string name="forward">Вперед</string>
    <string name="cover">Обложка</string>
    <string name="connection_error_title">Проблемы со связью \n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="retry">Обновить</string>
    <string name="not_found_error_title">Ничего не нашлось</string>
    <string name="history">Вы искали</string>
    <string name="clear">Очистить историю</string>
    
    <string name="track_time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="not_found_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="favorite">Избранные треки</string>

    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="exit_playlist_creation_title">Завершить создание плейлиста?</string>
    <string name="exit_playlist_creation_message">Все несохраненные данные будут потеряны</string>
    <string name="finish">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="track_already_added">Трек уже добавлен в плейлист %1$s</string>
    <string name="track_added">Добавлено в плейлист %1$s</string>
    <string name="not_found_track">Вы не добавили\nни одного трека</string>

    <string name="delete_track_title">Хотите удалить трек?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="playlist_share">Поделиться</string>
    <string name="playlist_share_text">Поделиться плейлистом</string>
    <string name="empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_edit">Редактировать информацию</string>
    <string name="playlist_delete">Удалить плейлист</string>
    <string name="delete_playlist_title">Хотите удалить плейлист %1$s?</string>

    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="playlist_updated">Плейлист %1$s изменен</string>

    <string name="add_to_favorite">Добавить в избранное</string>
    <string name="not_found_media">Ваша медиатека пуста</string>
    <string name="playlist">Плейлисты</string>

    <string name="play">Воспроизвести</string>
</resources>