<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/blue"
    android:paddingStart="@dimen/padding_16"
    android:paddingEnd="@dimen/padding_16"
    android:paddingBottom="@dimen/padding_28">

    <TextView style="@style/header"
        android:text="@string/app_name"
        android:textColor="@color/white">
    </TextView>

    <Button style="@style/main_menu_buttons"
        android:id="@+id/search"
        android:text="@string/search"
        app:icon="@drawable/ic_search_24"
        android:layout_marginTop="@dimen/padding_24"/>

    <Button style="@style/main_menu_buttons"
        android:id="@+id/media"
        android:text="@string/media"
        app:icon="@drawable/ic_media_24" />

    <Button style="@style/main_menu_buttons"
        android:id="@+id/settings"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings_24" />

</LinearLayout>