<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_16"
    tools:context="com.example.playlistmaker.settings.ui.SettingsFragment">

    <TextView
        android:id="@+id/header"
        style="@style/Header"
        android:text="@string/settings">
    </TextView>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switch"
        style="@style/SwitchSettingsElement"
        android:layout_marginTop="@dimen/padding_24"
        android:checked="false"
        app:thumbTint="@color/blue"
        app:trackTint="@color/blue_light"
        android:text="@string/theme"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share"
        style="@style/TextSettingsElement"
        android:drawableEnd="@drawable/ic_share_24"
        android:text="@string/share" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support"
        style="@style/TextSettingsElement"
        android:drawableEnd="@drawable/ic_support_24"
        android:text="@string/support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/agreement"
        style="@style/TextSettingsElement"
        android:drawableEnd="@drawable/ic_forward_24"
        android:text="@string/agreement" />

</LinearLayout>