<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_bg"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:id="@+id/drag_handle"
        android:layout_width="50dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:background="@color/search_clr" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/playlist_cover"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="13dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedPlaylistImage"
            tools:src="@drawable/placeholder" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/playlist_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="?attr/colorOnPrimary"
                android:fontFamily="@font/ys_display_regular"
                android:textSize="16sp"
                tools:text="Название плейлиста" />

            <TextView
                android:id="@+id/track_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="?attr/colorOnSecondary"
                android:fontFamily="@font/ys_display_regular"
                android:textSize="11sp"
                tools:text="150 треков" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/menu_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:paddingStart="16dp"
        android:layout_marginVertical="21dp"
        android:text="@string/playlist_share"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/menu_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:paddingStart="16dp"
        android:layout_marginVertical="21dp"
        android:text="@string/playlist_edit"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/menu_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:paddingStart="16dp"
        android:layout_marginVertical="21dp"
        android:text="@string/playlist_delete"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp" />

</LinearLayout>